<resources>
    <string name="app_name">Guess The Color</string>
    <string name="action_settings">Settings</string>
    <string name="about_label">About</string>
    <string name="leaderboards_label">Leaderboards</string>
    <string name="high_score_label">High Score</string>
    <string name="play_label">Play</string>
    <string name="pref_nickname_label">Nickname</string>
    <string name="pref_nickname_key">nickname</string>
    <string name="pref_nickname_default">Player</string>

    <string name="righ_answer">THATS \n RIGHT!</string>
    <string name="wrong_answer">TOO \n BAD :(</string>

    <string name="next_color">Next Color</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="exit_to_menu">EXIT TO MENU</string>
    <string name="unpause">UNPAUSE</string>
    <string name="restart">RESTART</string>

     <string name="about_text">\ Guess the Color \n
    0.0.5 \n
    Try to pick the right color for each RGB code shown.</string>
</resources>
