<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henriquegarces.guessthecolor.PauseActivity"
    android:gravity="center">

    <Button
        android:id="@+id/unpause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unpause"
        android:textColor="@color/textColorPrimary"
        android:layout_marginBottom="10dp" />
    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    <Button
        android:id="@+id/exit_to_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_to_menu"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    <Button
        android:id="@+id/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="10dp" />
</LinearLayout>