<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.henriquegarces.guessthecolor.MainActivity">



        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/oval_ripple"
            android:contentDescription="@string/play_label"
            android:src="@drawable/ic_play_arrow_white_48dp"
            android:elevation="6dp"
            android:stateListAnimator="@anim/fab_raise"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="150dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">
            <ImageButton
                android:id="@+id/scores_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trophy_grey600_24dp"
                android:contentDescription="@string/leaderboards_label"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />
            <ImageButton
                android:id="@+id/about_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_information_grey600_24dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/about_label"
                android:layout_marginRight="15dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"/>
            <ImageButton
                android:id="@+id/action_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_grey600_24dp"
                android:contentDescription="@string/action_settings"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />
        </LinearLayout>


</LinearLayout>